# Sudhana

./: .gitignore  CMakeLists.txt  README.md  includes.h  main.c
class/: calculator.h  element.h  fileLoader.h  graph.h  linkList.h  logger.h  stack.h
